--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -290,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Leo el CSV 'sentiment_analysis_funcion'\n",
-    "df_sentiment= pd.read_csv('sentiment_analysis_funcion.csv', low_memory=False)"
+    "df_sentimiento_analisis= pd.read_csv('sentiment_analysis_funcion.csv', low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -312,22 +312,16 @@
     }
    ],
    "source": [
-    "def sentiment_analysis(año):\n",
+    "def sentiment_analysis(anio):\n",
     "    '''\n",
-    "    Función que devuelve la cantidad de registros de reseñas de usuarios categorizados con un análisis de sentimiento para un año de lanzamiento específico.\n",
-    "    \n",
-    "    Parámetros:\n",
-    "    - año (int): Año de lanzamiento de los juegos.\n",
-    "    \n",
-    "    Retorna:\n",
-    "    - Un diccionario con la cantidad de registros para cada categoría de análisis de sentimiento.\n",
-    "    Ejemplo de retorno: {\"Negative\": 182, \"Neutral\": 120, \"Positive\": 278}\n",
+    "    Función que devuelve la cantidad de registros de reseñas de usuarios \n",
+    "    categorizados con un análisis de sentimiento para un anio de lanzamiento específico. \n",
     "    '''\n",
     "    \n",
-    "    # Filtrar las reseñas por el año especificado\n",
-    "    df_filtrado = df_sentiment[df_sentiment['release_date'].str.startswith(str(año))]\n",
+    "    # Filtrar las reseñas por el anio especificado\n",
+    "    df_filtrado = df_sentimiento_analisis[df_sentimiento_analisis['release_date'].str.startswith(str(anio))]\n",
     "\n",
-    "    # Contar la cantidad de registros para cada categoría de análisis de sentimiento\n",
+    "        # Contar la cantidad de registros para cada categoría de análisis de sentimiento\n",
     "    sentiment_counts = df_filtrado['sentiment_analysis'].value_counts()\n",
     "\n",
     "    # Crear un diccionario con los resultados\n",
@@ -342,8 +336,9 @@
     "            result_dict[\"Positive\"] = count\n",
     "\n",
     "    return result_dict\n",
+    "\n",
     "count_sentiment = sentiment_analysis(2005)\n",
-    "print(count_sentiment)"
+    "print(count_sentiment)\n"
    ]
   }
  ],
