--- a/PI_etl.ipynb
+++ b/PI_etl.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### Procesamiento de Datos desde Archivos JSON a CSV\n",
-    "* Este código de Python realiza el procesamiento de datos desde archivos JSON a archivos CSV, abordando la detección de codificación y la conversión de datos en DataFrames de Pandas. A continuación, se explica cada paso del proceso:"
+    "* Para Iniciar este proyecto voy a realizar un procesamiento de datos desde archivos JSON a archivos CSV, abordando la detección de codificaciónes y la conversión de datos. A continuación, se explica cada paso del proceso:"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> 1.Leyendo los Datasets</h1>\n"
+    "## 1.Leyendo los Datasets\n"
    ]
   },
   {
@@ -1180,7 +1180,7 @@
     }
    ],
    "source": [
-    "df1_reviews_copia_3.head()"
+    "df1_reviews_copia_3.head() #  Hu-a-la!!! lo he coseguido"
    ]
   },
   {
@@ -1669,16 +1669,16 @@
     "\n",
     "def verificar_tipo_datos(df):\n",
     "    \n",
-    "    mi_dict = {\"nombre_campo\": [], \"tipo_datos\": [], \"no_nulos_%\": [], \"nulos_%\": []}\n",
+    "    mi_dict = {\"nombre_campo\": [], \"tipo_datos\": [], \"no_nulos_%\": [], \"nulos_%\": []} # Creo un diccionario para almacenar la información sobre las columnas del DataFrame.\n",
     "\n",
-    "    for columna in df.columns:\n",
+    "    for columna in df.columns:  # Se recorren las columnas del DataFrame, y se calculan los porcentajes de valores no nulos y nulos para cada columna.\n",
     "        porcentaje_no_nulos = (df[columna].count() / len(df)) * 100\n",
     "        mi_dict[\"nombre_campo\"].append(columna)\n",
     "        mi_dict[\"tipo_datos\"].append(df[columna].apply(type).unique())\n",
     "        mi_dict[\"no_nulos_%\"].append(round(porcentaje_no_nulos, 2))\n",
     "        mi_dict[\"nulos_%\"].append(round(100-porcentaje_no_nulos, 2))\n",
     "\n",
-    "    df_info = pd.DataFrame(mi_dict)\n",
+    "    df_info = pd.DataFrame(mi_dict) # A partir de la información recopilada en el diccionario, se crea un nuevo DataFrame\n",
     "\n",
     "    for columna in df.columns:\n",
     "        print(columna, \" (nulos) = \", df[columna].isnull().sum())\n",
@@ -3495,10 +3495,10 @@
     "    cleaned_text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
     "    return cleaned_text\n",
     "\n",
-    "# Lista de columnas que deseas limpiar\n",
+    "# Columnas que voy a limpiar\n",
     "columns_to_clean = ['genres', 'tags', 'specs', 'publisher', 'app_name', 'title', 'developer']\n",
     "\n",
-    "# Aplicar la función a las columnas especificadas\n",
+    "# Aplicó la función a las columnas especificadas\n",
     "for column in columns_to_clean:\n",
     "    games[column] = games[column].apply(clean_text)\n"
    ]
