--- a/PI_EDA.ipynb
+++ b/PI_EDA.ipynb
@@ -1375,7 +1375,8 @@
     "\n",
     "Finalmente, investigaré los géneros más comunes en el DataFrame de juegos ('df_games') mediante un gráfico de barras. Esto proporcionará información sobre cuáles son los géneros más populares en los juegos y cuántos de ellos están presentes en el conjunto de datos.\n",
     "\n",
-    "A continuación, se presentan los resultados de estas visualizaciones que ayudarán a guiar el análisis y la toma de decisiones futuras.</h4>\n",
+    "A continuación, se presentan los resultados de estas visualizaciones que ayudarán a guiar el análisis y la toma de decisiones futuras.<br>\n",
+    "Disfruta mucho...</h4>\n",
     "\n",
     "\n",
     "\n",
@@ -1386,7 +1387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Graficar"
+    "# Graficar"
    ]
   },
   {
