Proceso de Funciones

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -140,7 +140,7 @@
     "    '''Vuelvo a crear la función que me devolvera al usuario con mayor jugadas\n",
     "    los años y horas'''\n",
     "    \n",
-    "    # filtrare el DataFrame para incluir solo el género específico\n",
+    "    # Incluyo solo el género específico\n",
     "    df_filtro2 = user_genre[user_genre['genres'] == genres]\n",
     "\n",
     "    # Esta linea corrige los valores de 'release_date' que no siguen el formato esperado\n",
@@ -208,17 +208,17 @@
     "def UsersRecommend(year):\n",
     "    '''Devuelve los 3 juegos más recomendados por usuarios para el año dado por un usuario específico.'''\n",
     "    \n",
-    "    # Filtra reseñas recomendadas para el año y el usuario específico\n",
+    "    # Esta linea lee las reseñas recomendadas para el año y el usuario específico\n",
     "    filtered_reviews = user_recommend[(user_recommend['release_date'].str.contains(str(year), regex=False, na=False)) & (user_recommend['recommend'] == True)]\n",
     "\n",
     "    # Contar la cantidad de reseñas por título de juego\n",
     "    game_counts = filtered_reviews['title'].value_counts().reset_index()\n",
     "    game_counts.columns = ['title', 'count']\n",
     "\n",
-    "    # Seleccionar los 3 juegos más recomendados\n",
+    "    # Acá estan los 3 juegos más recomendados\n",
     "    top_games = game_counts.head(3)\n",
     "\n",
-    "    # Crear una lista de diccionarios con los juegos más recomendados\n",
+    "    # Creó una lista de diccionarios con los juegos más recomendados\n",
     "    top_3_games_list = [{\"Puesto {}: {}\".format(i+1, game): count} for i, (game, count) in enumerate(zip(top_games['title'], top_games['count']))]\n",
     "\n",
     "    return top_3_games_list\n",
@@ -260,9 +260,9 @@
     "def juegosNoRecomendados(año):\n",
     "    \n",
     "    ''' Y esta funcion lo que hara es lo contrario de la anterior, \n",
-    "        devolvera los juegos no recomendados por los usuarios'''\n",
+    "        devolvera los juegos NO recomendados por los usuarios'''\n",
     "        \n",
-    "    # Filtrare el DataFrame para incluir solo el año y las reseñas no recomendadas\n",
+    "    # Nuevamente incluyo solo el año y las reseñas no recomendadas\n",
     "    filtrando_reviews = juegos_no_recom[(juegos_no_recom['release_date'].str.contains(str(año), regex=False, na=False)) & (juegos_no_recom['recommend'] == False)]\n",
     "\n",
     "    # Agrupo por título del juego y cuenta la cantidad de reseñas no recomendadas\n",
@@ -319,13 +319,13 @@
     "    categorizados con un análisis de sentimiento para un anio de lanzamiento específico. \n",
     "    '''\n",
     "    \n",
-    "    # Filtrar las reseñas por el anio especificado\n",
+    "    # Especificando el año de las reseñas\n",
     "    df_filtrado = df_sentimiento_analisis[df_sentimiento_analisis['release_date'].str.startswith(str(anio))]\n",
     "\n",
-    "        # Contar la cantidad de registros para cada categoría de análisis de sentimiento\n",
+    "        # Cuento la cantidad de registros para cada categoría de análisis de sentimiento\n",
     "    sentiment_counts = df_filtrado['sentiment_analysis'].value_counts()\n",
     "\n",
-    "    # Crear un diccionario con los resultados\n",
+    "    # Y creo un diccionario con los resultados\n",
     "    result_dict = {\"Negative\": 0, \"Neutral\": 0, \"Positive\": 0}\n",
     "    \n",
     "    for index, count in sentiment_counts.items():\n",
