Funciones Modelo Recomendación

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -1,12 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelo de Aprendizaje Automatico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tras concluir el Análisis Exploratorio de Datos (EDA) para comprender la naturaleza de nuestros datos, se procede con la fase siguiente: la creación de un modelo de recomendación basado en la similitud del coseno. \n",
+    "\n",
+    "Para el primer enfoque del modelo, se establece una relación ítem-ítem. En este escenario, se evalúa un ítem con respecto a su similitud con otros ítems para ofrecer recomendaciones similares. En este caso, el input corresponde a un juego y el output es una lista de juegos recomendados, utilizando el concepto de similitud del coseno.\n",
+    "\n",
+    "Por otra parte, se considera una segunda propuesta para el sistema de recomendación, basada en el filtro user-item. En esta estrategia, se analiza a un usuario para identificar usuarios con gustos similares y se recomiendan ítems que hayan sido apreciados por estos usuarios afines.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd # Importo las libreias que utilizare en este proceso\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -15,12 +33,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Previo al inicio de mi modelo, realicé una conversión a un nuevo DataFrame, incluyendo únicamente las columnas necesarias para llevar a cabo este proceso."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "item_model= pd.read_csv('modeloo_item.csv', low_memory=False)\n"
+    "item_model= pd.read_csv('modeloo_item.csv', low_memory=False) # Leó el Dataframe llamado 'modeloo_item' \n"
    ]
   },
   {
@@ -110,7 +135,7 @@
     }
    ],
    "source": [
-    "item_model.head()"
+    "item_model.head() # Visualizo nada mas para revisar su forma."
    ]
   },
   {
@@ -130,7 +155,7 @@
     }
    ],
    "source": [
-    "item_model.shape"
+    "item_model.shape # Acá solo pra corroborar cuantas columnas tengo y hacerme una idea de como trabajarlos."
    ]
   },
   {
@@ -488,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- funcion"
+    "- Hago la funcion que me devolvera los juegos recomendados. "
    ]
   },
   {
@@ -500,7 +525,7 @@
     "def recomendacion_juegos(item_id):\n",
     "    item_id = int(item_id)\n",
     "    \n",
-    "    # Filtrar el juego e igualarlo a su ID\n",
+    "    # Aqui lo que hare es como igualarlo comforme al id del juego.\n",
     "    seleccion_juego = item_model[item_model['item_id'] == item_id]\n",
     "    \n",
     "    # Devolver error en caso de vacío\n",
@@ -802,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "divido el dataframe para poder subir en render. "
+    "- Voy a dividir el dataframe para poder subir en render. "
    ]
   },
   {
@@ -854,7 +879,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lo convierto a un nuevo archivo csv para render"
+    "- Lo convierto a un nuevo archivo csv para render."
    ]
   },
   {
@@ -2077,19 +2102,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Primera Función item-item, introduzco el id del juego y me devuelve juegos recomendados."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encontrar_juegos(item_id):\n",
-    "    # Encuentra el índice del juego ingresado por ID\n",
+    "    # Encuentra el índice del juego ingresado por item_id\n",
     "    juego_indice = render_model.index[render_model['item_id'] == item_id].tolist()[0]\n",
     "    \n",
-    "    # Extrae las características del juego ingresado\n",
+    "    # Extraigo las características del juego \n",
     "    juego_caracteristicas = render_model.iloc[juego_indice, 3:].values.reshape(1, -1)\n",
     "    \n",
-    "    # Calcula la similitud coseno entre el juego ingresado y todos los demás juegos\n",
+    "    # Y acá se calcula la similitud coseno entre el juego ingresado y todos los demás juegos\n",
     "    render = cosine_similarity(render_model.iloc[:, 3:], juego_caracteristicas)\n",
     "    \n",
     "    # Obtiene los índices de los juegos más similares (excluyendo el juego de entrada)\n",
@@ -2122,6 +2154,13 @@
    "source": [
     "juegos_similares = encontrar_juegos(8870)\n",
     "print(juegos_similares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Segunda Función de usuario-item, Ingreso el id  del usuario y le devuelve juegos recomendados."
    ]
   },
   {
